fix dropdown: set toggle button z-index

--- a/modules/dropdown/scss/_dropdown.scss
+++ b/modules/dropdown/scss/_dropdown.scss
@@ -13,6 +13,15 @@
 
 
 
+// Dropdown toggle
+.dropdown-toggle {
+    position: relative;
+}
+
+
+
+
+
 // Dropdown menu
 .dropdown-menu {
     position: fixed;
